[package]
name = "channel_pipes"
description = "Perform operations on broadcast queues."
version = "0.1.1"
edition = "2021"
authors = ["Frixuu <kontakt@lukasz.xyz>"]
readme = "README.md"
repository = "https://github.com/Frixuu/ChannelPipes"
categories = ["concurrency"]
license = "MIT"

[dependencies]
crossbeam-channel = { version = "0.5", optional = true }

[features]
default = ["crossbeam"]
crossbeam = ["crossbeam-channel"]
mpsc = []
